# ha-addons-custom

./: README.md  repository.json
.github/workflows/: builder.yml
openthread_border_router/: CHANGELOG.md  build.yaml  config.yaml
technitium_dns/: DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
technitium_dns/rootfs/etc/s6-overlay/s6-rc.d/technitium/: run
wyoming_openai_adapter/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml  pyproject.toml  requirements.txt  run.sh  setup.py
wyoming_openai_adapter/src/wyoming_openai_adapter/: const.py
